--- a/app/assets/stylesheets/calc.scss
+++ b/app/assets/stylesheets/calc.scss
@@ -55,6 +55,11 @@ input[type="text"], select {
   margin:10px auto;
 }
 
+select {
+  -webkit-appearance: button;
+  appearance: button;
+}
+
 input[type="submit"] {
   margin: 0px auto;
     display: block;
@@ -140,7 +145,7 @@ li > span {
   position: absolute;
   width: 25px;
   height: 25px;
-  top: -5px;
+  top: 14px;
   bottom: 0;
   right: 0;
   left: 0;
